@@ -6,14 +6,20 @@ import java.io.Serializable;
 /**
  * @author Sam Reid
  */
-public class GetRecording implements Serializable {
+public class GetRecordingSample implements Serializable {
     private final String filename;
+    private final int index;
 
-    public GetRecording( String filename ) {
+    public GetRecordingSample( String filename, int index ) {
         this.filename = filename;
+        this.index = index;
     }
 
     public String getFilename() {
         return filename;
+    }
+
+    public int getIndex() {
+        return index;
     }
 }
