@@ -1,3 +1,4 @@
+Provide single data points instead of batches for recordings
 # 00.00.18 (49740) Mar 11, 2011
 # 00.00.17 (49739) Mar 11, 2011
 Increased max payload size by 1000x
